--- a/06-uvod-v-latex/urnik.tex
+++ b/06-uvod-v-latex/urnik.tex
@@ -117,7 +117,7 @@ katere podatke naj vsebujejo.
    podrobneje opisana na koncu poglavja.
 
    \item Razred \emph{Skupina} predstavlja skupino študentov. Kot podatke torej potrebujemo
-   smer skupine (npr\. pedagoška matematika) ter število študentov v njej. Podobno kot pri
+   smer skupine (npr.\ pedagoška matematika) ter število študentov v njej. Podobno kot pri
    profesorjih, tudi tukaj potrebujemo tabelo zasedenosti.
 
    \item Razred \emph{Predavalnica} nosi podatke o kapaciteti predavalnice, njeno oznako
@@ -149,7 +149,7 @@ dovolj, če podamo zasedenost le za en teden.
 Tip vrednosti tabele ni striktno določen. Tako bi nekateri programerji uporabili
 celoštevilsko tabelo, kjer bi vrednost 1 pomenila, da je oseba zasedena, vrednost 0
 pa bi predstavljala njeno dosegljivost. Podobno bi postopali, če bi izbrali logični
-tip (npr\. \verb|bool| v C++), kjer bi vrednost \verb|true| predstavljala
+tip (npr.\ \verb|bool| v C++), kjer bi vrednost \verb|true| predstavljala
 dosegljivost, \verb|false| pa zasedenost.
 
 \subsection{Omejitve}
@@ -174,8 +174,8 @@ Poglejmo si nekaj omejitev, ki jih urnik ne sme kršiti:
    \item Nobena skupina ne sme imeti več predavanj hkrati.
    \item Nobena predavalnica ne sme biti dodeljena večim predavanjem hkrati.
    \item Predavalnica mora imeti zadostno kapaciteto.
-   \item Predavanja posebne vrste (npr\. vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
-   \item Urnik mora zadoščati zastavljenemu časovnemu okvirju (npr\. od sedmih zjutraj do osmih zvečer).
+   \item Predavanja posebne vrste (npr.\ vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
+   \item Urnik mora zadoščati zastavljenemu časovnemu okvirju (npr.\ od sedmih zjutraj do osmih zvečer).
 \end{itemize}
 % konec okolja itemize
 
@@ -188,7 +188,7 @@ krši nobenega izmed zgoraj naštetih načel, a še zdaleč ne ustreza merilom k
 %
 Algoritem je najbolje implementirati tako, da do kršenja strogih omejitev sploh ne more priti.
 Tabela zasedenosti je dober primer pametne implementacije, saj tako že v osnovi  preprečujemo
-dodeljevanje t\.i\. prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
+dodeljevanje t.\i.\ prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
 mora najprej v tabeli zasedenosti preveriti, če je v tistem terminu le-ta še na voljo,
 sicer se vstavljanje ne izvede.
 
@@ -432,7 +432,7 @@ korakov, in si šele nato ogledajo njihov natančen opis.
    ustavitveni pogoj je zadovoljivo velika vrednost kriterijske funkcije.
 
    \item Naključno izberemo okolico trenutne rešitve. Z okolico izberemo tudi operacijo,
-   ki jo izvajamo na tem koraku (npr\. zamenjava dveh srečanj).
+   ki jo izvajamo na tem koraku (npr.\ zamenjava dveh srečanj).
 
    \item Če v tem koraku izberemo tisto zamenjavo srečanj, ki izmed vseh možnih najbolj
    poveča vrednost kriterijske funkcije, potem postopamo enako, kot požrešna metoda. Če
@@ -479,7 +479,7 @@ izbiro spremembe preveri, če je vsebovana v seznamu prepovedanih sprememb. Pogl
 je takšno postopanje smiselno.
 
 Naj bo \(n = 100\) ter \(s_1\) sprememba urnika, ki nas je pripeljala v lokalni maksimum. To
-spremembo (npr\. zamenjava \(\text{srečanja}_i\) in \(\text{srečanja}_j\)) sedaj shranimo v
+spremembo (npr.\ zamenjava \(\text{srečanja}_i\) in \(\text{srečanja}_j\)) sedaj shranimo v
 seznam tabujev. V naslednjem koraku izvedemo spremembo \(s_2\), ki se prav tako shrani v
 seznam prepovedanih sprememb. Podobno naredimo za vse spremembe v nadaljnih korakih. S
 tem poskrbimo, da se lahko v isti lokalni maksimum vrnemo šele čez \(n = 100\) korakov, saj
